fix: extra whitespace in footer links

--- a/src/css/compositions/_cluster.scss
+++ b/src/css/compositions/_cluster.scss
@@ -19,7 +19,7 @@
 			&::after {
 				content: var(--delineator, "·");
 				display: inline-block;
-				padding-inline: var(--padding-inline, var(--size-tiny));
+				padding-inline: var(--padding-inline, var(--size-tiny-small));
 				font-size: var(--font-size, 1em);
 				font-weight: var(--font-weight, var(--font-weight-bold));
 				line-height: 0;
